Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26846

QGraphicsItem: When a parent item has ItemHasNoContents and ItemClipsChildrenToShape set then it doesn't always update the children

    XMLWordPrintable

Details

    • 49c251e0543ea80e69d1725bb08bb4dfe3f225ab (5.0) 111889ea5a1b40e3dc54380298096a978e9a5684 (4.8)

    Description

      QGraphicsItem: When a parent item has ItemHasNoContents set then it doesn't always update the children when a change occurs on the parent. In the attached example, the parent has ItemHasNoContents set and ItemClipsChildrenToShape and the child item is just a normal rect item. When the parent item is hidden with setVisible(false) then the child item is still visible.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes