tests/manual/qgraphicsitem/qgraphicsitem.pro
@@ -1,0 +1,2 @@
+QT += widgets
+SOURCES += main.cpp
